test/d2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-loadbalancer-deployment
  namespace: test3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        namespace: test3
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: test2
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
  type: LoadBalancer
