test/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemon-test
spec:
  selector:
    matchLabels:
      app: daemon-pod
  template:
    metadata:
      name: daemon-pod-name
      labels:
        app: daemon-pod
    spec:
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: IfNotPresent
