test/headless-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deploy-test
      version: "1"
  template:
    metadata:
      labels:
        app: deploy-test
        version: "1"
    spec:
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: headless-service
spec:
  selector:
    app: deploy-test
    version: "1"
  clusterIP: "None"
  ports:
    - port: 355
      targetPort: 80
