test/hello-kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-4
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-deployment
  namespace: test-4
  labels:
    app: hello-kubernetes
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-kubernetes
  template:
    metadata:
      labels:
        app: hello-kubernetes
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
          name: hello-port
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: test-4
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 8080
    targetPort: hello-port
  type: LoadBalancer
