test/init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-test-init-c
  labels:
    app: init-container
spec: 
  containers:
  - name: app-nginx
    image: nginx
    imagePullPolicy: IfNotPresent
  initContainers:
  - name: init-one
    image: busybox
    command: ["sh","-c","sleep 10"]
    imagePullPolicy: IfNotPresent
  - name: init-two
    image: busybox
    command: ["sh","-c","sleep 2"]
    imagePullPolicy: IfNotPresent
