test/lifecycle.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  containers:
    - name: main
      image: busybox
      command:
        - /bin/sh
        - -c
        - "echo Running; sleep 15; cat /tmp/test_message"
      lifecycle:
        postStart:
          exec:
            command:
              - /bin/sh
              - -c
              - "touch /tmp/test_message; echo helle PostStart > /tmp/test_message"
        preStop:
          exec:
            command:
              - /bin/sh
              - -c
              - "echo helle PreStop"
