test/nodeport-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-test
  labels:
    app: nginx-test
spec:
  containers:
    - name: nginx-test
      image: nginx
      imagePullPolicy: IfNotPresent

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-service
spec:
  selector:
    app: nginx-test
  ports:
    - port: 355
      nodePort: 31111
      targetPort: 80
  type: NodePort
