test/probe-readiness-http.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-test-pod
  labels:
    app: nginx-test
spec:
  containers:
    - name: nginx-main
      image: nginx
      imagePullPolicy: IfNotPresent
      readinessProbe:
        httpGet:
          port: 80
        periodSeconds: 2
        initialDelaySeconds: 15

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-service
spec:
  selector:
    app: nginx-test
  ports:
    - port: 80
      nodePort: 31111
      targetPort: 80
  type: NodePort
