test/svc-external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-baidu
spec:
  type: ExternalName
  externalName: www.baidu.com
